# vs-engine

./: .editorconfig  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: linux.yml  macos.yml  test.yml
nix/lib/: debug.nix  default.nix  matrix.nix
stubs/: vapoursynth.pyi
tests/: test_convert.py  test_futures.py  test_helpers.py  test_hospice.py  test_loop_adapters.py  test_loops.py  test_policy.py  test_policy_store.py  test_tests_pytest.py  test_tests_unittest.py  test_unittest.py  test_video.py  test_vpy.py
tests/fixtures/: heuristic_examples.json  pytest_core_in_module.py  pytest_core_stored_in_test.py  pytest_core_succeeds.py  test.vpy  unittest_core_in_module.py  unittest_core_stored_in_test.py  unittest_core_succeeds.py
vsengine/: __init__.py  _futures.py  _helpers.py  _hospice.py  _nodes.py  _testutils.py  convert.py  loops.py  policy.py  unittest.py  video.py  vpy.py
vsengine/adapters/: __init__.py  asyncio.py  trio.py
vsengine/tests/: pytest.py  unittest.py
