[tool.poetry]
name = "vsengine"
version = "0.1.0"
description = "An engine for our vapoursynth previewers"
authors = ["Sarah <cid+git@cid-chan.moe>"]
license = "AGPL-3.0-or-later"

packages = [
  { include = "vsengine" },
]

[tool.poetry.dependencies]
python = "^3.9"
VapourSynth = ">=57"
trio = {version = "^0.20.0", optional = true}
PyQt5 = {version = "^5.15.0", optional = true}

[tool.poetry.extras]
trio = ["trio"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
