[project]
name = "vsengine"
version = "0.2.0+dirty"
license = { file = "COPYING" }
readme = "README.md"
authors = [
    { name = "cid-chan", email ="cid+git@cid-chan.moe" }
]
dynamic = ["description"]
requires-python = ">=3.9"

dependencies = [
    "vapoursynth>=57"
]

[project.scripts]
vpy-unittest = "vsengine.tests.unittest:main"

[project.entry-points.pytest11]
vsengine = "vsengine.tests.pytest"

[project.optional-dependencies]
trio = [
    "trio"
]
test = [
    "pytest"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
